update code lý thuyết bài 100.1 - 100.9 form html

--- a/0.Full code ly thuyet trong seri bai giang web/bai99-filter-drop-shadow/style.css
+++ b/0.Full code ly thuyet trong seri bai giang web/bai99-filter-drop-shadow/style.css
@@ -20,6 +20,7 @@ img {
 
 /* Ví dụ 2: Tạo bong bóng chat*/
 .chat {
+  max-width: 300px;
   font-size: 1.2rem;
   filter: drop-shadow(0 0 2px black);
   background: #fff;
