--- a/0.Full code ly thuyet trong seri bai giang web/bai141.7 tailwind-Grid -grid-auto-columns_auto_rows/src/output.css
+++ b/0.Full code ly thuyet trong seri bai giang web/bai141.7 tailwind-Grid -grid-auto-columns_auto_rows/src/output.css
@@ -7,7 +7,10 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-cyan-400: oklch(78.9% 0.154 211.53);
+    --color-blue-50: oklch(97% 0.014 254.604);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-slate-100: oklch(96.8% 0.007 247.896);
     --color-slate-200: oklch(92.9% 0.013 255.508);
@@ -186,11 +189,38 @@
   .col-span-3 {
     grid-column: span 3 / span 3;
   }
+  .col-span-4 {
+    grid-column: span 4 / span 4;
+  }
   .col-span-5 {
     grid-column: span 5 / span 5;
   }
+  .col-span-full {
+    grid-column: 1 / -1;
+  }
+  .col-start-1 {
+    grid-column-start: 1;
+  }
   .col-start-2 {
     grid-column-start: 2;
+  }
+  .col-start-3 {
+    grid-column-start: 3;
+  }
+  .col-end-3 {
+    grid-column-end: 3;
+  }
+  .col-end-7 {
+    grid-column-end: 7;
+  }
+  .row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+  .row-span-4 {
+    grid-row: span 4 / span 4;
+  }
+  .m-4 {
+    margin: calc(var(--spacing) * 4);
   }
   .-mt-4 {
     margin-top: calc(var(--spacing) * -4);
@@ -212,6 +242,30 @@
     width: calc(var(--spacing) * 20);
     height: calc(var(--spacing) * 20);
   }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
+  .h-\[5\] {
+    height: 5;
+  }
+  .h-\[50\] {
+    height: 50;
+  }
+  .h-\[300px\] {
+    height: 300px;
+  }
+  .h-\[400px\] {
+    height: 400px;
+  }
+  .h-\[500\] {
+    height: 500;
+  }
+  .h-\[500p\] {
+    height: 500p;
+  }
+  .h-\[500px\] {
+    height: 500px;
+  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -224,80 +278,68 @@
   .resize {
     resize: both;
   }
+  .auto-cols-\[0px\] {
+    grid-auto-columns: 0px;
+  }
+  .auto-cols-\[2\] {
+    grid-auto-columns: 2;
+  }
+  .auto-cols-\[10px\] {
+    grid-auto-columns: 10px;
+  }
+  .auto-cols-\[20px\] {
+    grid-auto-columns: 20px;
+  }
+  .auto-cols-\[180px\] {
+    grid-auto-columns: 180px;
+  }
+  .auto-cols-\[200\] {
+    grid-auto-columns: 200;
+  }
+  .auto-cols-\[200p\] {
+    grid-auto-columns: 200p;
+  }
+  .auto-cols-\[200px\] {
+    grid-auto-columns: 200px;
+  }
+  .auto-cols-auto {
+    grid-auto-columns: auto;
+  }
+  .auto-cols-max {
+    grid-auto-columns: max-content;
+  }
+  .auto-cols-min {
+    grid-auto-columns: min-content;
+  }
+  .grid-flow-col {
+    grid-auto-flow: column;
+  }
+  .grid-flow-col-dense {
+    grid-auto-flow: column dense;
+  }
+  .grid-flow-row {
+    grid-auto-flow: row;
+  }
+  .grid-flow-row-dense {
+    grid-auto-flow: row dense;
+  }
+  .auto-rows-fr {
+    grid-auto-rows: minmax(0, 1fr);
+  }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-  .grid-cols-\[a\] {
-    grid-template-columns: a;
-  }
-  .grid-cols-\[au\] {
-    grid-template-columns: au;
-  }
-  .grid-cols-\[aut\] {
-    grid-template-columns: aut;
-  }
-  .grid-cols-\[auto\] {
-    grid-template-columns: auto;
-  }
-  .grid-cols-\[auto_1\] {
-    grid-template-columns: auto 1;
-  }
-  .grid-cols-\[auto_1f\] {
-    grid-template-columns: auto 1f;
-  }
-  .grid-cols-\[auto_1fr\] {
-    grid-template-columns: auto 1fr;
-  }
-  .grid-cols-\[auto_1fr_\] {
-    grid-template-columns: auto 1fr ;
-  }
-  .grid-cols-\[auto_1fr_a\] {
-    grid-template-columns: auto 1fr a;
-  }
-  .grid-cols-\[auto_1fr_au\] {
-    grid-template-columns: auto 1fr au;
-  }
-  .grid-cols-\[auto_1fr_aut\] {
-    grid-template-columns: auto 1fr aut;
-  }
-  .grid-cols-\[auto_1fr_auto\] {
-    grid-template-columns: auto 1fr auto;
-  }
-  .grid-cols-\[auto_1fr_auto_\] {
-    grid-template-columns: auto 1fr auto ;
-  }
-  .grid-cols-\[auto_1fr_auto_a\] {
-    grid-template-columns: auto 1fr auto a;
-  }
-  .grid-cols-\[auto_1fr_auto_au\] {
-    grid-template-columns: auto 1fr auto au;
-  }
-  .grid-cols-\[auto_1fr_auto_aut\] {
-    grid-template-columns: auto 1fr auto aut;
-  }
-  .grid-cols-\[auto_1fr_auto_auto\] {
-    grid-template-columns: auto 1fr auto auto;
-  }
-  .grid-cols-\[auto_1fr_auto_auto_\] {
-    grid-template-columns: auto 1fr auto auto ;
-  }
-  .grid-cols-\[auto_1fr_auto_auto_a\] {
-    grid-template-columns: auto 1fr auto auto a;
-  }
-  .grid-cols-\[auto_1fr_auto_auto_au\] {
-    grid-template-columns: auto 1fr auto auto au;
-  }
-  .grid-cols-\[auto_1fr_auto_auto_aut\] {
-    grid-template-columns: auto 1fr auto auto aut;
+  .grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
   .grid-cols-\[auto_1fr_auto_auto_auto\] {
     grid-template-columns: auto 1fr auto auto auto;
-  }
-  .grid-cols-\[auto_\] {
-    grid-template-columns: auto ;
   }
   .grid-cols-\[repeat\(5\,150px\)\] {
     grid-template-columns: repeat(5,150px);
@@ -311,17 +353,83 @@
   .grid-cols-subgrid {
     grid-template-columns: subgrid;
   }
+  .grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
+  .grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+  .grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+  .grid-rows-\[1\] {
+    grid-template-rows: 1;
+  }
+  .grid-rows-\[2\] {
+    grid-template-rows: 2;
+  }
+  .grid-rows-\[10\] {
+    grid-template-rows: 10;
+  }
+  .grid-rows-\[50px_repeat\(2\,100px\)\] {
+    grid-template-rows: 50px repeat(2,100px);
+  }
+  .grid-rows-\[100\] {
+    grid-template-rows: 100;
+  }
+  .grid-rows-\[100p\] {
+    grid-template-rows: 100p;
+  }
+  .grid-rows-\[100px\] {
+    grid-template-rows: 100px;
+  }
+  .grid-rows-\[100px_1\] {
+    grid-template-rows: 100px 1;
+  }
+  .grid-rows-\[100px_10\] {
+    grid-template-rows: 100px 10;
+  }
+  .grid-rows-\[100px_100\] {
+    grid-template-rows: 100px 100;
+  }
+  .grid-rows-\[100px_100p\] {
+    grid-template-rows: 100px 100p;
+  }
+  .grid-rows-\[100px_100px\] {
+    grid-template-rows: 100px 100px;
+  }
+  .grid-rows-\[100px_100px_\] {
+    grid-template-rows: 100px 100px ;
+  }
+  .grid-rows-\[100px_\] {
+    grid-template-rows: 100px ;
+  }
+  .grid-rows-\[auto_1fr_auto_auto\] {
+    grid-template-rows: auto 1fr auto auto;
+  }
+  .grid-rows-\[r\] {
+    grid-template-rows: r;
+  }
+  .grid-rows-\[re\] {
+    grid-template-rows: re;
+  }
+  .grid-rows-\[rea\] {
+    grid-template-rows: rea;
+  }
+  .grid-rows-\[rep\] {
+    grid-template-rows: rep;
+  }
+  .grid-rows-subgrid {
+    grid-template-rows: subgrid;
+  }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
-  }
-  .gap-x-6 {
-    column-gap: calc(var(--spacing) * 6);
-  }
-  .gap-y-6 {
-    row-gap: calc(var(--spacing) * 6);
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -338,6 +446,15 @@
   }
   .border-slate-600 {
     border-color: var(--color-slate-600);
+  }
+  .bg-amber-200 {
+    background-color: var(--color-amber-200);
+  }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
+  }
+  .bg-blue-50 {
+    background-color: var(--color-blue-50);
   }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
@@ -360,6 +477,12 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
@@ -374,6 +497,9 @@
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
+  }
+  .text-center {
+    text-align: center;
   }
   .text-right {
     text-align: right;
